Auto-sync: uncommitted examples